Fix chaos worker and improve api examples
